# han2026

./: .env.example  README.md  main.py  make_submission.bat  make_submission.sh  mynegotiator.py  pyproject.toml  requirements.txt  restore_git_repos.bat  restore_git_repos.sh  update_all_packages.bat  update_all_packages.sh  update_package.bat  update_package.sh
examples/: adapter.py  boa.py  llm.py  llm_adapter.py  map.py  nollm.py  nollm_adapter.py  simple.py
scenarios/Amsterdam/: Amsterdam_domain.yml  _info.yml  _stats.yaml  party1.yml  party2.yml
scenarios/Camera/: _info.yml  _info.yml.backup  _stats.yaml  buyer.yml  camera_domain.yml  seller.yml
scenarios/Car/: _info.yml  _stats.yaml  car.yml  deal.yml  deal2.yml
scenarios/Grocery/: Grocery.yml  Grocery_domain.yml  _info.yaml  _info.yml  _stats.yaml  agent.yml  display.py  human.yml  mary.yml  sam.yml
scenarios/ISBTAcquisition/: BT_prof.yml  IS_BT_Acquisition.yml  IS_prof.yml  _info.yml  _stats.yaml
scenarios/Island/: Island.yml  _info.yaml  agent.yml  display.py  human.yml
scenarios/Laptop/: _info.yaml  _info.yml  _stats.yaml  buyer.yml  laptop_domain.yml  seller.yml
scenarios/NiceOrDie/: NiceOrDie.yml  _info.yml  _stats.yaml  prof1.yml  prof2.yml
scenarios/Trade/: Buyer.yml  Seller.yml  Trade.yml  _info.yaml  display.py
tests/: test_cli.py  test_examples.py  test_mynegotiator.py
